--- a/VacationPy/VacationPy.ipynb
+++ b/VacationPy/VacationPy.ipynb
@@ -200,7 +200,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "088d255c01394e6a90ff906498bde4aa",
+       "model_id": "7dab1673a20b490b9867095b37c7a264",
        "version_major": 2,
        "version_minor": 0
       },
@@ -613,7 +613,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -641,7 +641,6 @@
        "      <th>Country</th>\n",
        "      <th>Latitude</th>\n",
        "      <th>Longitude</th>\n",
-       "      <th>Closest Hotel</th>\n",
        "      <th>Hotel Name</th>\n",
        "    </tr>\n",
        "  </thead>\n",
@@ -652,7 +651,6 @@
        "      <td>HR</td>\n",
        "      <td>45.16</td>\n",
        "      <td>18.02</td>\n",
-       "      <td>Hotel Savus</td>\n",
        "      <td>Art Hotel</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -662,7 +660,6 @@
        "      <td>42.78</td>\n",
        "      <td>-9.06</td>\n",
        "      <td>Hotel La Muradana</td>\n",
-       "      <td>A Casa da Fonte</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>56</th>\n",
@@ -671,7 +668,6 @@
        "      <td>34.37</td>\n",
        "      <td>107.36</td>\n",
        "      <td>Lily Garden Hotel</td>\n",
-       "      <td>Sunshine Business Hotel</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>65</th>\n",
@@ -679,7 +675,6 @@
        "      <td>CL</td>\n",
        "      <td>-30.03</td>\n",
        "      <td>-70.71</td>\n",
-       "      <td>Rucka-Inn Cottages &amp; Domes</td>\n",
        "      <td>Cabañas La Villa Sueca</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -689,7 +684,6 @@
        "      <td>41.72</td>\n",
        "      <td>-8.86</td>\n",
        "      <td>Hotel Flôr de Sal</td>\n",
-       "      <td>Pousada Viana do Castelo</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>267</th>\n",
@@ -697,7 +691,6 @@
        "      <td>BR</td>\n",
        "      <td>-1.20</td>\n",
        "      <td>-46.02</td>\n",
-       "      <td>HOTEL R. SOARES</td>\n",
        "      <td>HOTEL R. SOARES</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -707,7 +700,6 @@
        "      <td>-17.71</td>\n",
        "      <td>-39.25</td>\n",
        "      <td>Mar Doce de Abrolhos</td>\n",
-       "      <td>Mar Doce de Abrolhos</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>309</th>\n",
@@ -715,7 +707,6 @@
        "      <td>CH</td>\n",
        "      <td>46.36</td>\n",
        "      <td>6.98</td>\n",
-       "      <td>Hôtel du Port</td>\n",
        "      <td>Hôtel du Port</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -725,7 +716,6 @@
        "      <td>46.07</td>\n",
        "      <td>30.47</td>\n",
        "      <td>Ruta</td>\n",
-       "      <td>Ruta</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>392</th>\n",
@@ -733,8 +723,7 @@
        "      <td>JP</td>\n",
        "      <td>32.98</td>\n",
        "      <td>130.82</td>\n",
-       "      <td>旅館宝来館</td>\n",
-       "      <td>里山の隠れ宿 花富亭（かふうてい）</td>\n",
+       "      <td>Mochizuki Ryokan Kumamoto</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>434</th>\n",
@@ -742,7 +731,6 @@
        "      <td>MA</td>\n",
        "      <td>30.42</td>\n",
        "      <td>-9.60</td>\n",
-       "      <td>Iberostar Founty Beach</td>\n",
        "      <td>Sofitel Agadir Thalassa sea &amp; spa</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -751,7 +739,6 @@
        "      <td>UZ</td>\n",
        "      <td>40.43</td>\n",
        "      <td>71.72</td>\n",
-       "      <td>Terra Nova Hotel</td>\n",
        "      <td>Hotel Mehmon Saroy</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -761,7 +748,6 @@
        "      <td>-20.48</td>\n",
        "      <td>-55.81</td>\n",
        "      <td>Fênix Plaza Hotel</td>\n",
-       "      <td>Fênix Plaza Hotel</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>510</th>\n",
@@ -770,47 +756,46 @@
        "      <td>44.55</td>\n",
        "      <td>15.37</td>\n",
        "      <td>Hotel Stara Lika</td>\n",
-       "      <td>Hotel Stara Lika</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                City Country  Latitude  Longitude               Closest Hotel  \\\n",
-       "10    Slavonski Brod      HR     45.16      18.02                 Hotel Savus   \n",
-       "35             Muros      ES     42.78      -9.06           Hotel La Muradana   \n",
-       "56           Guozhen      CN     34.37     107.36           Lily Garden Hotel   \n",
-       "65            Vicuña      CL    -30.03     -70.71  Rucka-Inn Cottages & Domes   \n",
-       "68            Areosa      PT     41.72      -8.86           Hotel Flôr de Sal   \n",
-       "267       Carutapera      BR     -1.20     -46.02             HOTEL R. SOARES   \n",
-       "279        Caravelas      BR    -17.71     -39.25        Mar Doce de Abrolhos   \n",
-       "309             Luan      CH     46.36       6.98               Hôtel du Port   \n",
-       "336           Zatoka      UA     46.07      30.47                        Ruta   \n",
-       "392          Kikuchi      JP     32.98     130.82                       旅館宝来館   \n",
-       "434       Santa Cruz      MA     30.42      -9.60      Iberostar Founty Beach   \n",
-       "457  Yangi Marg`ilon      UZ     40.43      71.72            Terra Nova Hotel   \n",
-       "468        Anastácio      BR    -20.48     -55.81           Fênix Plaza Hotel   \n",
-       "510           Gospić      HR     44.55      15.37            Hotel Stara Lika   \n",
+       "                City Country  Latitude  Longitude  \\\n",
+       "10    Slavonski Brod      HR     45.16      18.02   \n",
+       "35             Muros      ES     42.78      -9.06   \n",
+       "56           Guozhen      CN     34.37     107.36   \n",
+       "65            Vicuña      CL    -30.03     -70.71   \n",
+       "68            Areosa      PT     41.72      -8.86   \n",
+       "267       Carutapera      BR     -1.20     -46.02   \n",
+       "279        Caravelas      BR    -17.71     -39.25   \n",
+       "309             Luan      CH     46.36       6.98   \n",
+       "336           Zatoka      UA     46.07      30.47   \n",
+       "392          Kikuchi      JP     32.98     130.82   \n",
+       "434       Santa Cruz      MA     30.42      -9.60   \n",
+       "457  Yangi Marg`ilon      UZ     40.43      71.72   \n",
+       "468        Anastácio      BR    -20.48     -55.81   \n",
+       "510           Gospić      HR     44.55      15.37   \n",
        "\n",
        "                            Hotel Name  \n",
        "10                           Art Hotel  \n",
-       "35                     A Casa da Fonte  \n",
-       "56             Sunshine Business Hotel  \n",
+       "35                   Hotel La Muradana  \n",
+       "56                   Lily Garden Hotel  \n",
        "65              Cabañas La Villa Sueca  \n",
-       "68            Pousada Viana do Castelo  \n",
+       "68                   Hotel Flôr de Sal  \n",
        "267                    HOTEL R. SOARES  \n",
        "279               Mar Doce de Abrolhos  \n",
        "309                      Hôtel du Port  \n",
        "336                               Ruta  \n",
-       "392                  里山の隠れ宿 花富亭（かふうてい）  \n",
+       "392          Mochizuki Ryokan Kumamoto  \n",
        "434  Sofitel Agadir Thalassa sea & spa  \n",
        "457                 Hotel Mehmon Saroy  \n",
        "468                  Fênix Plaza Hotel  \n",
        "510                   Hotel Stara Lika  "
       ]
      },
-     "execution_count": 10,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -859,7 +844,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -881,13 +866,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "088d255c01394e6a90ff906498bde4aa",
+       "model_id": "7dab1673a20b490b9867095b37c7a264",
        "version_major": 2,
        "version_minor": 0
       },
